--- a/src/modules/header/header.css
+++ b/src/modules/header/header.css
@@ -1,5 +1,5 @@
 .header {
-  background-color: var(--color-header);
+  background-color: var(--color-frame);
   display: flex;
   justify-content: space-between;
   align-items: center;
