--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,8 @@
 
 :root {
   --color-frame: rgb(160, 160, 160);
-  --color-main: rgb(199, 216, 255);
+  --color-todo: rgb(199, 216, 255);
+  --color-sidebar: rgb(92, 92, 92);
 }
 
 *,
