--- a/src/modules/main/todo-list/todo-item/todo-item.css
+++ b/src/modules/main/todo-list/todo-item/todo-item.css
@@ -1,6 +1,16 @@
 .todo-item {
   border-bottom: 1px solid black;
-  display: flex;
-  flex-direction: row;
   background-color: rgb(239, 239, 239);
+  display: flex;
+  flex-direction: column;
+}
+
+.todo-item-top {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.todo-item-title {
+  flex-grow: 1;
 }
