Added inputs for new todo

--- a/src/modules/main/main.css
+++ b/src/modules/main/main.css
@@ -1,4 +1,5 @@
 .main {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: 2fr 7fr;
+  grid-template-rows: 1fr;
 }
