--- a/src/modules/main/sidebar/sidebar.css
+++ b/src/modules/main/sidebar/sidebar.css
@@ -1,9 +1,9 @@
 .sidebar {
   background-color: var(--color-sidebar);
-  width: 300px;
   height: 100%;
   padding: 2rem;
   display: flex;
   flex-direction: column;
   row-gap: 1rem;
+  grid-area: 1 / 1 / 2 / 2;
 }
