--- a/src/modules/User Interface/Main/TodoListContainer/TodoListContainer.css
+++ b/src/modules/User Interface/Main/TodoListContainer/TodoListContainer.css
@@ -1,5 +1,7 @@
 .todo-list-container {
   background-color: rgb(221, 206, 93);
   flex-grow: 4;
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
 }
