--- a/src/modules/User Interface/Main/TodoListContainer/AddTodoModal/AddTodoModal.css
+++ b/src/modules/User Interface/Main/TodoListContainer/AddTodoModal/AddTodoModal.css
@@ -4,5 +4,6 @@
   /* position: absolute;
   height: 100%;
   width: 100%; */
-  flex-grow: 1;
+  /* flex-grow: 1; */
+  grid-area: 1 / 1 / 2 / 2;
 }
