--- a/src/modules/UserInterface/Main/TodoListContainer/TodoListContainer.css
+++ b/src/modules/UserInterface/Main/TodoListContainer/TodoListContainer.css
@@ -4,4 +4,7 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
+  /* max-height: 100%; */
+  max-height: 100%;
+  overflow: auto;
 }
