--- a/src/modules/UserInterface/Main/Sidebar/Sidebar.css
+++ b/src/modules/UserInterface/Main/Sidebar/Sidebar.css
@@ -2,4 +2,29 @@
   background-color: rgb(189, 87, 87);
   flex-grow: 1;
   /* position: fixed; */
+  padding: 2rem;
+}
+
+.sidebar-button {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: aliceblue;
+  padding: 0.5rem;
+  border-radius: 10px;
+}
+
+.sidebar-button:hover {
+  background-color: rgb(215, 235, 255);
+  cursor: pointer;
+}
+
+.sidebar-button-left {
+  display: flex;
+  align-items: center;
+}
+
+.sidebar-icon {
+  height: 25px;
+  width: 25px;
 }
