Get amount of todays tasks

--- a/src/modules/UserInterface/Main/TodoListContainer/TodoList/TodoList.css
+++ b/src/modules/UserInterface/Main/TodoListContainer/TodoList/TodoList.css
@@ -4,7 +4,7 @@
 }
 
 .add-todo-btn {
-  background-color: gold;
+  background-color: rgb(49, 255, 172);
   position: fixed;
   bottom: 5%;
   right: 2%;
