Edit projects button replaces normal projects list

--- a/src/modules/UserInterface/Main/Sidebar/Sidebar.css
+++ b/src/modules/UserInterface/Main/Sidebar/Sidebar.css
@@ -51,3 +51,8 @@
 .clicked {
   background-color: yellowgreen;
 }
+
+.projects-header-container {
+  display: flex;
+  justify-content: space-between;
+}
