Todo item layout improvements

--- a/src/modules/Interface/Main/Content/TodoList/TodoItem/TodoItem.css
+++ b/src/modules/Interface/Main/Content/TodoList/TodoItem/TodoItem.css
@@ -1,3 +1,22 @@
 .todo-item {
   background-color: #fff;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto;
+}
+
+.todo-item-left {
+  grid-area: 1 / 1 / 2 / 2;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.todo-item-right {
+  grid-area: 1 / 2 / 2 / 3;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.todo-item-expandable {
+  grid-area: 2 / 1 / 3 / 3;
 }
