--- a/src/modules/Interface/Main/Content/TodoList/TodoList.css
+++ b/src/modules/Interface/Main/Content/TodoList/TodoList.css
@@ -2,3 +2,9 @@
   background-color: var(--color-todo);
   grid-area: 1 / 1 / 2 / 2;
 }
+
+.todo-list {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
+}
