--- a/src/modules/Interface/Main/Content/TodoList/TodoItem/TodoItem.css
+++ b/src/modules/Interface/Main/Content/TodoList/TodoItem/TodoItem.css
@@ -1,8 +1,7 @@
 .todo-item {
   background-color: #fff;
-  /* display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto auto; */
+  display: flex;
+  flex-direction: column;
 }
 
 /* TOP SECTION */
