Todo item bottom layout improvements

--- a/src/modules/Interface/Main/Content/TodoList/TodoItem/TodoItem.css
+++ b/src/modules/Interface/Main/Content/TodoList/TodoItem/TodoItem.css
@@ -18,3 +18,14 @@
 
 .todo-item-buttons {
 }
+
+/* BOTTOM SECTION */
+.todo-item-description {
+  display: flex;
+}
+.todo-item-due-date {
+  display: flex;
+}
+.todo-item-project {
+  display: flex;
+}
