--- a/src/modules/Interface/Header/Header.css
+++ b/src/modules/Interface/Header/Header.css
@@ -1,3 +1,24 @@
 .header {
   background-color: var(--color-frame);
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 0.35rem;
+}
+
+.sidebar-toggle {
+  background-color: transparent;
+  border: none;
+  border-radius: 5px;
+  padding: 0.1rem 0.3rem;
+}
+
+.sidebar-toggle:hover {
+  cursor: pointer;
+  background-color: rgba(255, 255, 255, 0.308);
+}
+
+.sidebar-toggle-icon {
+  width: 25px;
+  filter: invert(100%) sepia(0%) saturate(9%) hue-rotate(137deg) brightness(102%) contrast(104%);
 }
