--- a/src/modules/Interface/Header/Header.css
+++ b/src/modules/Interface/Header/Header.css
@@ -1,6 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
+
 .header {
   background-color: var(--color-frame);
-  padding: 0.35rem;
+  padding: 1rem 0.5rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -32,9 +34,12 @@
 }
 
 /* --------------- HEADLINE --------------- */
-.header > h1 {
+.headline {
   color: white;
   justify-self: center;
+  font-family: "Pacifico", sans-serif;
+  font-size: 3rem;
+  line-height: 0;
 }
 
 /* --------------- DARK MODE TOGGLE --------------- */
