--- a/src/modules/Interface/Interface.css
+++ b/src/modules/Interface/Interface.css
@@ -1,7 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+
 /* GLOBALS */
 
 :root {
-  --color-frame: rgb(79, 79, 79);
+  --color-frame: rgb(43, 43, 43);
   --color-todo: rgb(199, 216, 255);
   --color-sidebar: rgb(68, 68, 68);
 }
@@ -12,6 +14,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: "Roboto", sans-serif;
 }
 
 html,
