--- a/src/modules/Interface/Main/Sidebar/Sidebar.css
+++ b/src/modules/Interface/Main/Sidebar/Sidebar.css
@@ -1,27 +1,43 @@
 .sidebar {
   background-color: var(--color-sidebar);
   flex-grow: 1;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.5rem;
 }
 
 .sidebar-icon {
-  width: 30px;
+  width: 20px;
 }
 
+/* DATE FILTERS */
 .date-filter-btn {
   background-color: #fff;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  padding: 0.25rem;
+  border-radius: 5px;
+}
+
+.date-filter-btn:hover {
+  cursor: pointer;
 }
 
 .date-filter-btn-left {
   display: flex;
+  align-items: center;
+  column-gap: 0.5rem;
 }
 
+/* PROJECT BUTTONS */
 .add-project-btn {
   background-color: blueviolet;
   display: flex;
 }
 
+/* UTILITY */
 .clicked {
   background-color: gold;
 }
