--- a/src/modules/Interface/Main/Sidebar/Sidebar.css
+++ b/src/modules/Interface/Main/Sidebar/Sidebar.css
@@ -32,6 +32,19 @@
   column-gap: 0.5rem;
 }
 
+.today-count,
+.week-count {
+  background-color: rgb(212, 212, 212);
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  /* text-align: center; */
+  font-size: 0.9rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 /* PROJECT BUTTONS */
 .projects-header {
   background-color: white;
