--- a/src/modules/Interface/Main/Sidebar/Sidebar.css
+++ b/src/modules/Interface/Main/Sidebar/Sidebar.css
@@ -179,6 +179,10 @@
   cursor: pointer;
 }
 
+.add-project-btn:hover > img {
+  /* background-color: green; */
+}
+
 /* NEW PROJECT POPUP */
 .add-project-popup {
   display: flex;
