--- a/src/modules/Interface/Main/Content/TodoList/TodoList.css
+++ b/src/modules/Interface/Main/Content/TodoList/TodoList.css
@@ -1,10 +1,16 @@
 .todo-list-container {
   background-color: var(--color-todo);
   grid-area: 1 / 1 / 2 / 2;
+  padding: 1rem 8rem;
 }
 
 .todo-list {
   display: flex;
   flex-direction: column;
-  row-gap: 1rem;
+  /* row-gap: 1rem; */
+}
+
+.todo-list-header {
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
 }
