priority icon hover tweaks

--- a/src/modules/Interface/Main/Content/TodoList/TodoItem/TodoItem.css
+++ b/src/modules/Interface/Main/Content/TodoList/TodoItem/TodoItem.css
@@ -52,8 +52,8 @@
   filter: brightness(0%);
 }
 
-.todo-item-priority-btn:hover {
-  /* filter: contrast(100%); */
+.todo-item-priority-btn:hover > .todo-item-priority-icon {
+  filter: brightness(90%);
 }
 
 .todo-item-edit-btn,
