--- a/src/modules/Interface/Main/Content/Content.css
+++ b/src/modules/Interface/Main/Content/Content.css
@@ -1,8 +1,8 @@
 .content {
-  flex-grow: 4;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
+  /* flex-grow: 4; */
+  /* display: grid; */
+  /* grid-template-columns: 350px auto; */
   max-height: 100%;
+  /* width: 100%; */
   overflow: auto;
 }
