--- a/src/modules/Interface/Main/Content/TodoList/TodoItem/TodoItem.css
+++ b/src/modules/Interface/Main/Content/TodoList/TodoItem/TodoItem.css
@@ -15,16 +15,22 @@
 }
 
 .todo-item-checkbox {
+  height: 1rem;
+  width: 1rem;
 }
 
 .todo-item-title {
   flex-grow: 1;
 }
 
+.todo-item-title:hover {
+  cursor: pointer;
+}
+
 .todo-item-buttons {
   display: flex;
   align-items: center;
-  column-gap: 0.25rem;
+  column-gap: 0.5rem;
 }
 
 .todo-item-icon {
@@ -62,12 +68,22 @@
 }
 
 /* BOTTOM SECTION */
-.todo-item-description {
-  display: flex;
+.todo-item-bottom {
+  margin-left: 2rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
-.todo-item-due-date {
-  display: flex;
+
+.todo-item-label {
+  font-weight: 600;
 }
+
+.todo-item-description,
+.todo-item-due-date,
 .todo-item-project {
-  display: flex;
+  /* display: flex;
+  flex-direction: row;
+  column-gap: 1rem; */
+  display: grid;
+  grid-template-columns: 100px auto;
 }
