--- a/src/modules/Interface/Main/Content/TodoList/TodoList.css
+++ b/src/modules/Interface/Main/Content/TodoList/TodoList.css
@@ -2,6 +2,11 @@
   background-color: var(--color-todo);
   grid-area: 1 / 1 / 2 / 2;
   padding: 1rem 8rem;
+  width: 100%;
+  /* display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; */
 }
 
 .todo-list {
