--- a/src/modules/Interface/Main/Sidebar/Sidebar.css
+++ b/src/modules/Interface/Main/Sidebar/Sidebar.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   row-gap: 0.5rem;
-  width: 350px;
+  /* width: 350px; */
 }
 
 .sidebar-icon {
@@ -66,6 +66,10 @@
   justify-content: space-between;
   padding: 0.25rem 0.5rem;
   border-radius: 5px;
+}
+
+.projects-headline {
+  font-weight: 500;
 }
 
 .edit-projects-btn {
