--- a/src/modules/Interface/Main/Content/TodoList/TodoList.css
+++ b/src/modules/Interface/Main/Content/TodoList/TodoList.css
@@ -1,18 +1,23 @@
 .todo-list-container {
   background-color: var(--color-todo);
   grid-area: 1 / 1 / 2 / 2;
-  padding: 1rem 8rem;
+  padding: 1rem 0;
   width: 100%;
   /* display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .todo-list {
   display: flex;
   flex-direction: column;
   /* row-gap: 1rem; */
+  /* width: 500px; */
+  width: clamp(300px, 80%, 800px);
 }
 
 .todo-list-header {
