--- a/src/modules/Interface/Interface.css
+++ b/src/modules/Interface/Interface.css
@@ -32,6 +32,14 @@ body,
   width: 100%;
 }
 
+/* body::-webkit-scrollbar {
+  width: 50px;
+}
+
+body::-webkit-scrollbar-track {
+  width: 50px;
+} */
+
 /* UTILITY CLASSES */
 .hidden {
   display: none !important;
