--- a/src/modules/Interface/Main/Content/TodoModal/TodoModal.css
+++ b/src/modules/Interface/Main/Content/TodoModal/TodoModal.css
@@ -10,9 +10,116 @@
 }
 
 .modal-window {
-  background-color: aliceblue;
+  background-color: white;
   height: 300px;
-  width: 500px;
+  width: 550px;
   position: fixed;
   top: 25%;
+  border-radius: 5px;
+  padding: 1rem;
+  display: grid;
+  grid-template-rows: auto repeat(4, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+  row-gap: 1rem;
+  column-gap: 1rem;
+}
+
+.modal-window-header {
+  border-bottom: 1px solid black;
+  grid-area: 1 / 1 / 2 / 3;
+}
+
+.modal-window-title {
+  grid-area: 2 / 1 / 3 / 2;
+}
+
+#title-input {
+  height: 30px;
+  padding: 0 0.25rem;
+}
+
+.modal-window-description {
+  grid-area: 3 / 1 / 5 / 2;
+}
+
+#description-input {
+  height: 100%;
+  width: 100%;
+  resize: none;
+  padding: 0.25rem;
+}
+
+.modal-window-date {
+  grid-area: 2 / 2 / 3 / 3;
+}
+
+#date-input {
+  height: 30px;
+  padding: 0 0.25rem;
+}
+
+.modal-window-priority {
+  grid-area: 3 / 2 / 4 / 3;
+}
+
+#priority-input {
+  height: 30px;
+}
+
+.modal-window-project {
+  grid-area: 4 / 2 / 5 / 3;
+}
+
+#projects-input {
+  height: 30px;
+}
+
+.modal-window-title,
+.modal-window-description,
+.modal-window-date,
+.modal-window-priority,
+.modal-window-projects {
+  display: flex;
+  flex-direction: column;
+}
+
+#title-input,
+#description-input,
+#date-input,
+#priority-input,
+#projects-input {
+  border: 1px solid rgb(197, 197, 197);
+  border-radius: 3px;
+}
+
+.save-btn,
+.confirm-btn,
+.cancel-btn {
+  border: none;
+  border-radius: 3px;
+}
+
+.save-btn:hover,
+.confirm-btn:hover,
+.cancel-btn:hover {
+  cursor: pointer;
+}
+
+.cancel-btn {
+  background-color: red;
+  color: white;
+}
+
+.cancel-btn:hover {
+  background-color: rgb(222, 0, 0);
+}
+
+.save-btn,
+.confirm-btn {
+  background-color: rgb(123, 255, 0);
+}
+
+.save-btn:hover,
+.confirm-btn:hover {
+  background-color: rgb(123, 237, 16);
 }
