--- a/src/modules/Interface/Main/Content/TodoModal/TodoModal.css
+++ b/src/modules/Interface/Main/Content/TodoModal/TodoModal.css
@@ -66,7 +66,7 @@
   height: 30px;
 }
 
-.modal-window-project {
+.modal-window-projects {
   grid-area: 4 / 2 / 5 / 3;
 }
 
@@ -122,4 +122,42 @@
 .save-btn:hover,
 .confirm-btn:hover {
   background-color: rgb(123, 237, 16);
+}
+
+@media only screen and (max-width: 600px) {
+  .modal-window {
+    /* display: flex;
+    flex-direction: column; */
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto 1fr 2fr repeat(4, 1fr);
+    width: clamp(100px, 90vw, 400px);
+    height: fit-content;
+    top: 15%;
+  }
+
+  .modal-window-header {
+    border-bottom: 1px solid black;
+    grid-area: 1 / 1 / 2 / 3;
+  }
+
+  .modal-window-title {
+    grid-area: 2 / 1 / 3 / 3;
+  }
+
+  .modal-window-description {
+    grid-area: 3 / 1 / 4 / 3;
+  }
+
+  .modal-window-date {
+    grid-area: 4 / 1 / 5 / 3;
+  }
+
+  .modal-window-priority {
+    grid-area: 5 / 1 / 6 / 3;
+  }
+
+  .modal-window-projects {
+    grid-area: 6 / 1 / 7 / 3;
+  }
 }
