Selected filters get bold label

--- a/src/modules/Interface/Main/Sidebar/Sidebar.css
+++ b/src/modules/Interface/Main/Sidebar/Sidebar.css
@@ -250,6 +250,11 @@
 /* UTILITY */
 .clicked {
   background-color: #ffdeea;
+  /* font-weight: bold; */
+}
+
+.clicked > .date-filter-btn-left > .date-filter-label,
+.clicked > .project-name-input {
   font-weight: bold;
 }
 
