--- a/src/modules/Interface/Header/Header.css
+++ b/src/modules/Interface/Header/Header.css
@@ -2,7 +2,7 @@
 
 .header {
   background-color: var(--color-frame);
-  padding: 1rem 0.5rem;
+  padding: 1rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
