--- a/src/modules/Interface/Main/Content/Content.css
+++ b/src/modules/Interface/Main/Content/Content.css
@@ -7,6 +7,10 @@
   max-height: 100%;
   /* width: 100%; */
   /* overflow: auto; */
+  overflow: hidden;
+}
+
+.content:hover {
   overflow: overlay;
 }
 
