--- a/src/modules/Interface/Main/Content/Content.css
+++ b/src/modules/Interface/Main/Content/Content.css
@@ -7,11 +7,12 @@
   max-height: 100%;
   /* width: 100%; */
   /* overflow: auto; */
-  overflow: hidden;
+  overflow: overlay;
 }
 
-.content:hover {
-  overflow: overlay;
+.content:hover::-webkit-scrollbar-thumb {
+  /* opacity: 1; */
+  background-color: rgba(0, 0, 0, 0.301);
 }
 
 /* UTILITY */
