restructured project popup

--- a/src/modules/Interface/Main/Content/TodoList/TodoList.css
+++ b/src/modules/Interface/Main/Content/TodoList/TodoList.css
@@ -33,6 +33,9 @@
   bottom: 5%;
   right: 1.5%;
   background-color: deeppink;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .add-todo-btn:hover {
