--- a/src/modules/Interface/Main/Sidebar/Sidebar.css
+++ b/src/modules/Interface/Main/Sidebar/Sidebar.css
@@ -4,7 +4,7 @@
   padding: 1rem;
   display: flex;
   flex-direction: column;
-  row-gap: 0.5rem;
+  row-gap: 0.75rem;
   /* width: 350px; */
   overflow: overlay;
 }
@@ -57,16 +57,16 @@
 .projects-list {
   display: flex;
   flex-direction: column;
-  row-gap: 0.25rem;
+  row-gap: 0.1rem;
 }
 
 /* PROJECTS HEADER */
 .projects-header {
-  /* background-color: white; */
   display: flex;
   justify-content: space-between;
   padding: 0.25rem 0.5rem;
   border-radius: 5px;
+  margin: 1rem 0 0 0;
 }
 
 .projects-headline {
@@ -82,8 +82,6 @@
 }
 
 .edit-projects-btn:hover {
-  /* color: #a7ffff; */
-  /* filter: invert(93%) sepia(39%) saturate(3613%) hue-rotate(163deg) brightness(109%) contrast(107%); */
   filter: brightness(0%);
   cursor: pointer;
 }
@@ -93,8 +91,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* background-color: #fff; */
-  /* padding: 0.25rem; */
   border-radius: 5px;
   height: 33px;
   margin-left: 1rem;
@@ -191,8 +187,6 @@
 }
 
 .add-project-btn:hover {
-  /* color: #88b2ff; */
-  /* filter: invert(69%) sepia(14%) saturate(5067%) hue-rotate(192deg) brightness(103%) contrast(110%); */
   filter: invert(0%);
   cursor: pointer;
 }
